--- a/algo-02/algo-02/App.config
+++ b/algo-02/algo-02/App.config
@@ -8,6 +8,7 @@
     <add name="algo_02.Properties.Settings.ConnectionString" connectionString="Data Source=.;Initial Catalog=Algo-Test01;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="TradeContext" connectionString="data source=.;initial catalog=Algo-Test01;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="DbContext" connectionString="data source=.;initial catalog=Algo-Test01;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AlgoDataBaseContext" connectionString="data source=.;initial catalog=Algo-Test01;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
