--- a/algo-02/algo-02/algo-02.csproj
+++ b/algo-02/algo-02/algo-02.csproj
@@ -61,7 +61,7 @@
     <Compile Include="Entities\SYMBOL_HISTORY.cs" />
     <Compile Include="Entities\Wallet.cs" />
     <Compile Include="Entities\WALLET_HISTORY.cs" />
-    <Compile Include="MarketInterface.cs" />
+    <Compile Include="LogicLayer\MarketInterface.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -80,7 +80,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="EntityModels\" />
-    <Folder Include="LogicLayer\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
