begin logging database history bug

--- a/algo-02/algo-02/algo-02.csproj
+++ b/algo-02/algo-02/algo-02.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Entities\WALLET_HISTORY.cs" />
     <Compile Include="Entities\WatchList.cs" />
     <Compile Include="EntityModels\SymbolObject.cs" />
+    <Compile Include="LogicLayer\DecisionMaker.cs" />
     <Compile Include="LogicLayer\MarketInterface.cs" />
     <Compile Include="LogicLayer\Modelinterface.cs" />
     <Compile Include="Program.cs" />
