--- a/algo-02/algo-02/App.config
+++ b/algo-02/algo-02/App.config
@@ -9,7 +9,7 @@
     <add name="TradeContext" connectionString="data source=.;initial catalog=Algo-Test01;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="DbContext" connectionString="data source=.;initial catalog=Algo-Test01;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="DatabaseContext" connectionString="data source=.;initial catalog=Algo-Test01;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="AlgoDBContext" connectionString="data source=.;initial catalog=Algo-Test01;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
