--- a/algo-02/algo-02/algo-02.csproj
+++ b/algo-02/algo-02/algo-02.csproj
@@ -98,6 +98,7 @@
     <Compile Include="LogicLayer\KillCommandReader.cs" />
     <Compile Include="LogicLayer\MarketInterface.cs" />
     <Compile Include="LogicLayer\Modelinterface.cs" />
+    <Compile Include="LogicLayer\Reporter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
